# ifuviz

./: LICENSE  MUSE_emission_line_code.ipynb  README.md  emission_line_models_MUSE_cube.ipynb  packtool.toml  pyproject.toml  test_code.py
ifuviz/: __init__.py  loaddata.py  viztool.py
